
please update the categories "new features" and "bugfixes" before a pull request merge!

version 2.1.0
new features:
- add a numerical raytracer depending on the radiopropa code
- major change in the declaration of mediums at the back end, at the front end nothing changed.
- add a basic uproot data reader for RNO-G data
- changes to the eventbrowser in order to read RNO-G data

bugfixes:
- correct volume extension depending on zenith angle range when running with
secondaries

version 2.0.1
new features
- Veff utility can now calculate effective volumes for fine zenith angle binning
bugfixes:
- fixed rare cases where the Cpp implementation of the analytic ray tracer did not find a solution


version 2.0.0
- NuRadioReco is merged into the NuRadioMC repository. No new features were added and everything works (e.g. the imports)
as before but the NuRadioReco code is now part of the NuRadioMC github repository to simplify code development where NuRadioMC 
changes depend on changes in NuRadioReco. 


version 1.2.0
new features:
- major change in internal looping. Now, the radio signal from each shower is calculated and signal arrival times 
  (from different shower, ray racing solutions and receiver positions) that cluster together are simualted as one event
- merge hdf5 utility has multithreading option (and was refactored -> function names changed)
- distance cut can sum up all sourounding shower energies to properly account for possible interference
- noise temperature can be specified per station and channel
- trigger thresholds can be specified per channel
- bandwidth can be specified per station and channel 
- specifying the detector simulation became easier (check out the updated examples)
- memory consumption was optimized to stay <4GB per core
- random realization of showers are saved so that triggered events can be resimulated using the same random realization
- added option for noiseless channels in a "with noise" simulation