@@ -8,6 +8,9 @@ new features:
 - major change in the declaration of mediums at the back end, at the front end nothing changed.
 - add a basic uproot data reader for RNO-G data
 - changes to the eventbrowser in order to read RNO-G data
+- add sphericalWaveFitter module
+- add directory RNO_data with an example reconstruction for RNO data and the
+calculation of the cable delays
 
 bugfixes:
 - correct volume extension depending on zenith angle range when running with
